--- a/geppetto/Views/Storyboards/Profile/Favorites.xib
+++ b/geppetto/Views/Storyboards/Profile/Favorites.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Favorites" customModule="geppetto" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SavedActivities" customModule="geppetto" customModuleProvider="target">
             <connections>
                 <outlet property="favoritesView" destination="iN0-l3-epB" id="DTe-vQ-vBC"/>
                 <outlet property="stack" destination="Uot-KP-Ohk" id="yNp-hN-oFz"/>
