--- a/geppetto/Views/Storyboards/Profile/Moments.xib
+++ b/geppetto/Views/Storyboards/Profile/Moments.xib
@@ -27,6 +27,9 @@
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="xcZ-f9-2RJ"/>
+                    </connections>
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
