Add navigation from search card cells to a new tag view

--- a/geppetto/Views/Storyboards/Search/Search.storyboard
+++ b/geppetto/Views/Storyboards/Search/Search.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SMh-gv-qwT">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SMh-gv-qwT">
                                 <rect key="frame" x="0.0" y="140" width="414" height="673"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="cce-SV-bzZ">
@@ -46,11 +46,22 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="SMh-gv-qwT" id="LEH-Yc-CPm"/>
+                        <segue destination="7Wn-5S-jTw" kind="show" identifier="goToTag" id="Rrd-RJ-Mhw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
+        </scene>
+        <!--Tag-->
+        <scene sceneID="gvI-TJ-TrJ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Tag" id="7Wn-5S-jTw" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="plf-8p-Tn1"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mDj-Fo-Iof" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="655" y="116"/>
         </scene>
         <!--Buscar-->
         <scene sceneID="Tem-D9-ykC">
