Add activities cards to tag screen

--- a/geppetto/Views/Storyboards/Tag.storyboard
+++ b/geppetto/Views/Storyboards/Tag.storyboard
@@ -12,32 +12,66 @@
         <!--Tag View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="TagViewController" customModule="geppetto" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TagViewController" id="Y6W-OH-hqX" customClass="TagViewController" customModule="geppetto" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TAG SCREEN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBz-ab-pgN">
-                                <rect key="frame" x="156.5" y="437.5" width="101" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K4c-Gy-g3Z">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="XFP-xI-fpo">
+                                        <rect key="frame" x="16" y="16" width="382" height="100"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R9U-t5-js8">
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="100"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="V4x-3O-enb"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="XFP-xI-fpo" firstAttribute="bottom" secondItem="IJO-UB-NuT" secondAttribute="bottom" constant="16" id="878-Kc-4eN"/>
+                                    <constraint firstItem="XFP-xI-fpo" firstAttribute="top" secondItem="IJO-UB-NuT" secondAttribute="top" constant="16" id="BwP-Wy-xmR"/>
+                                    <constraint firstItem="XFP-xI-fpo" firstAttribute="width" secondItem="LSn-zR-rtY" secondAttribute="width" constant="-32" id="QSX-dl-J6T"/>
+                                    <constraint firstItem="XFP-xI-fpo" firstAttribute="trailing" secondItem="IJO-UB-NuT" secondAttribute="trailing" constant="16" id="Yjp-Ai-Fcu"/>
+                                    <constraint firstItem="XFP-xI-fpo" firstAttribute="leading" secondItem="IJO-UB-NuT" secondAttribute="leading" constant="16" id="ki6-Ys-Kgi"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="IJO-UB-NuT"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="LSn-zR-rtY"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="pBz-ab-pgN" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="5MR-F8-MJe"/>
-                            <constraint firstItem="pBz-ab-pgN" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="h0P-ow-lrv"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="K4c-Gy-g3Z" secondAttribute="trailing" id="4Y0-jB-CDG"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="K4c-Gy-g3Z" secondAttribute="bottom" id="EYQ-Pc-q02"/>
+                            <constraint firstItem="K4c-Gy-g3Z" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="v6i-0E-iOY"/>
+                            <constraint firstItem="K4c-Gy-g3Z" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="yuv-kZ-cmI"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Ejy-LT-WAO"/>
                     <connections>
-                        <outlet property="label" destination="pBz-ab-pgN" id="fKt-DJ-bR4"/>
+                        <outlet property="stack" destination="XFP-xI-fpo" id="k4K-5e-v3X"/>
+                        <segue destination="VGr-K1-Yu1" kind="show" identifier="goToOverview" id="vtH-Dv-pCf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="102"/>
+            <point key="canvasLocation" x="131.8840579710145" y="101.78571428571428"/>
+        </scene>
+        <!--ActivityOverview-->
+        <scene sceneID="Blf-ix-mZ5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ActivityOverview" id="VGr-K1-Yu1" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="aIE-40-kDE"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="llS-Xe-sCW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="724" y="102"/>
         </scene>
     </scenes>
     <resources>
