--- a/geppetto/Views/Storyboards/Search/ActivityCardCell.xib
+++ b/geppetto/Views/Storyboards/Search/ActivityCardCell.xib
@@ -18,24 +18,33 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tg5-tn-2aC" customClass="DesignableImageView" customModule="geppetto" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="231" height="368.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="231" height="354"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <real key="value" value="16"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="gradientColor">
+                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <stackView autoresizesSubviews="NO" opaque="NO" contentMode="redraw" axis="vertical" distribution="fillProportionally" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qV0-jQ-oPx">
-                        <rect key="frame" x="0.0" y="376.5" width="231" height="81.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLB-nv-4t9">
+                        <rect key="frame" x="12" y="327.5" width="22" height="14.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView autoresizesSubviews="NO" opaque="NO" contentMode="redraw" axis="vertical" distribution="fillProportionally" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qV0-jQ-oPx">
+                        <rect key="frame" x="0.0" y="362" width="231" height="96"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7w-e5-NXv">
-                                <rect key="frame" x="0.0" y="0.0" width="33" height="20.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="17"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="firstBaseline" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="WrJ-Kr-wGI">
-                                <rect key="frame" x="0.0" y="24.5" width="135" height="20"/>
+                                <rect key="frame" x="0.0" y="25" width="135" height="20"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5e4-23-sQd">
                                         <rect key="frame" x="0.0" y="-0.5" width="22" height="20"/>
@@ -56,38 +65,66 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DescriptionLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSV-kZ-UNs">
-                                <rect key="frame" x="0.0" y="48.5" width="96" height="14.5"/>
+                                <rect key="frame" x="0.0" y="53" width="96" height="14.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TagText" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLU-a3-bBk">
-                                <rect key="frame" x="0.0" y="67" width="44.5" height="14.5"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TagText" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLU-a3-bBk" customClass="DesignableLabel" customModule="geppetto" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="75.5" width="64.5" height="20.5"/>
+                                <color key="backgroundColor" systemColor="tintColor"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                         <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="topInset">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="bottomInset">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftInset">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="rightInset">
+                                        <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
                     </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIP-LX-Y7t">
+                        <rect key="frame" x="170.5" y="327.5" width="48.5" height="14.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="iLB-nv-4t9" firstAttribute="leading" secondItem="tg5-tn-2aC" secondAttribute="leading" constant="12" id="3EM-7U-se6"/>
                 <constraint firstItem="qV0-jQ-oPx" firstAttribute="top" secondItem="tg5-tn-2aC" secondAttribute="bottom" constant="8" id="9AE-Ft-zau"/>
+                <constraint firstItem="WIP-LX-Y7t" firstAttribute="bottom" secondItem="tg5-tn-2aC" secondAttribute="bottom" constant="-12" id="DGd-EF-i5z"/>
                 <constraint firstItem="tg5-tn-2aC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="KEw-SP-l07"/>
                 <constraint firstItem="tg5-tn-2aC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fKf-vf-Drb"/>
+                <constraint firstItem="WIP-LX-Y7t" firstAttribute="trailing" secondItem="tg5-tn-2aC" secondAttribute="trailing" constant="-12" id="uC2-Rh-0zG"/>
                 <constraint firstAttribute="trailing" secondItem="qV0-jQ-oPx" secondAttribute="trailing" id="uQo-fb-48k"/>
                 <constraint firstAttribute="trailing" secondItem="tg5-tn-2aC" secondAttribute="trailing" id="vYp-Ee-UWD"/>
                 <constraint firstAttribute="bottom" secondItem="qV0-jQ-oPx" secondAttribute="bottom" id="xf4-8p-bFc"/>
+                <constraint firstItem="iLB-nv-4t9" firstAttribute="bottom" secondItem="tg5-tn-2aC" secondAttribute="bottom" constant="-12" id="zXt-yT-grg"/>
                 <constraint firstItem="qV0-jQ-oPx" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="znF-bI-3H4"/>
             </constraints>
             <size key="customSize" width="449" height="344"/>
             <connections>
+                <outlet property="ageLabel" destination="iLB-nv-4t9" id="6Ut-ql-bwV"/>
                 <outlet property="descriptionLabel" destination="FSV-kZ-UNs" id="zZg-2n-tSb"/>
+                <outlet property="durationLabel" destination="WIP-LX-Y7t" id="2Kt-FS-Uup"/>
                 <outlet property="image" destination="tg5-tn-2aC" id="o0j-vk-1EY"/>
                 <outlet property="ratingCountLabel" destination="RLC-r4-rbr" id="OkO-RA-AaI"/>
                 <outlet property="ratingLabel" destination="5dl-Vm-kf9" id="2OK-o9-fPe"/>
@@ -97,6 +134,11 @@
             <point key="canvasLocation" x="147.10144927536234" y="150"/>
         </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="nLU-a3-bBk">
+            <size key="intrinsicContentSize" width="64.5" height="20.5"/>
+        </designable>
+    </designables>
     <resources>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemGrayColor">
@@ -104,6 +146,9 @@
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
